dev-infra/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot-service
  namespace: dev-infra
  labels:
    app: zot
spec:
  type: ClusterIP
  selector:
    app: zot
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
